# ocrtransforms

./: README.md  pyproject.toml  test_one.py
src/ocrtransforms/: __init__.py  transforms.py
